--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '1'
+version: "1"
 
 services:
   postgres:
@@ -14,4 +14,3 @@ services:
       - postgres_volume_fyp:/var/lib/postgresql/data
 volumes:
   postgres_volume_fyp:
-    external: true
