--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,5 +12,30 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - postgres_volume_fyp:/var/lib/postgresql/data
+    networks:
+      - dockernet
+  rabbitmq:
+    image: rabbitmq:management
+    container_name: ${RABBITMQ_CONTAINER_NAME}
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
+    networks:
+      - dockernet
+  redis:
+    image: redis:latest
+    container_name: ${REDIS_CONTAINER_NAME}
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    networks:
+      - dockernet
 volumes:
   postgres_volume_fyp:
+  redis_data:
+networks:
+  dockernet:
